# yozefu

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  NOTICE  README.md  compose.yml  deny.toml  rust-toolchain.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  code-coverage.yml  developer-experience.yml  publish.yml  security.yml  semver-checks.yml  tag.yml
crates/app/: Cargo.toml  LICENSE  README.md
crates/app/src/: app.rs  config.rs  lib.rs
crates/app/src/configuration/: cluster_config.rs  global_config.rs  internal_config.rs  mod.rs  yozefu_config.rs
crates/app/src/search/: atom.rs  compare.rs  expression.rs  filter.rs  mod.rs  search_query.rs  term.rs
crates/command/: Cargo.toml  LICENSE  README.md  themes.json
crates/command/examples/: my_cli.rs
crates/command/src/: cli.rs  cluster.rs  lib.rs  log.rs  theme.rs  version.rs
crates/command/src/command/: config_command.rs  create_filter.rs  import_filter.rs  main_command.rs  main_command_with_client.rs  mod.rs  utility_commands.rs
crates/command/src/command/configure/: get_command.rs  mod.rs  set_command.rs
crates/command/src/headless/: mod.rs
crates/command/src/headless/formatter/: json_formatter.rs  mod.rs  plain_formatter.rs  simple_formatter.rs  transpose_formatter.rs
crates/lib/: Cargo.toml  LICENSE  README.md
crates/lib/src/: error.rs  lib.rs
crates/lib/src/kafka/: avro.rs  data_type.rs  exported_kafka_record.rs  kafka_record.rs  mod.rs  schema.rs  schema_registry_client.rs  topic.rs
crates/lib/src/search/: atom.rs  clause.rs  expression.rs  expression_test.rs  filter.rs  mod.rs  number.rs  number_test.rs  offset.rs  offset_test.rs  order.rs  search_query.rs  string.rs  symbol.rs  symbol_test.rs  term.rs  timestamp.rs  wsi.rs
crates/lib/src/search/compare/: equal.rs  expression.rs  mod.rs  mod_test.rs  number.rs  string.rs
crates/lib/tests/: mod.rs  protobuf.rs
crates/lib/tests/inputs/: 1.sql  2.sql
crates/lib/tests/inputs/parsed-records/: record-1.json
crates/lib/tests/inputs/raw-records/: record-1.json  record-2.json  record-3.json
crates/lib/tests/inputs/search-queries/: 3.sql
crates/lib/tests/snapshots/: r#mod__exported_record.snap  r#mod__inputs@1.sql.snap  r#mod__inputs@2.sql.snap  r#mod__inputs@3.sql.snap  r#mod__parse_records@record-1.json.snap  r#mod__parse_records@record-2.json.snap  r#mod__parse_records@record-3.json.snap
crates/tui/: Cargo.toml  LICENSE  README.md
crates/tui/src/: action.rs  error.rs  lib.rs  records_buffer.rs  schema_detail.rs  theme.rs  tui.rs
crates/tui/src/component/: footer_component.rs  help_component.rs  issue_component.rs  mod.rs  progress_bar_component.rs  record_details_component.rs  records_component.rs  root_component.rs  schemas_component.rs  scroll_state.rs  search_component.rs  shortcut.rs  state.rs  topic_details_component.rs  topics_and_records_component.rs  topics_component.rs  ui.rs  vertical_scrollable_block.rs
crates/wasm-blueprints/: README.md
crates/wasm-blueprints/golang/: .dockerignore  Dockerfile  Makefile  README.md  go.mod  main.go
crates/wasm-blueprints/golang/tests/: parameters.json
crates/wasm-blueprints/js/: Dockerfile  Makefile  README.md  package-lock.json  package.json
crates/wasm-blueprints/js/src/: index.d.ts  index.js
crates/wasm-blueprints/rust/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
crates/wasm-blueprints/rust/src/: lib.rs
crates/wasm-blueprints/rust/tests/: match.json  no-match.json
crates/wasm-types/: Cargo.toml  LICENSE  README.md
crates/wasm-types/examples/: input.json
crates/wasm-types/src/: lib.rs
docs/: demo.tape  try-it.sh
docs/keybindings/: README.md
docs/name/: README.md
docs/query-language/: README.md
docs/release/: README.md
docs/schema-registry/: README.md
docs/schemas/: MyConsumer.java  MyProducer.java
docs/schemas/avro/: key-schema.json  value-schema.json
docs/schemas/json-schema/: key-schema.json  value-schema.json
docs/schemas/protobuf/: key-schema.proto  value-schema.proto
docs/search-filter/: README.md  filter-input-schema..json  filter-input.json  filter-result-schema.json
docs/themes/: README.md
docs/tls/: README.md
docs/url-templates/: README.md
