[workspace]
members = [
    "crates/lib",
    "crates/bin",
    "crates/command",
    "crates/app",
    "crates/tui",
    "crates/wasm-types",
    # "crates/wasm-blueprints/rust",
]

default-members = [
    "crates/lib",
    "crates/bin",
    "crates/command",
    "crates/app",
    "crates/tui",
    "crates/wasm-types",
#    "crates/wasm-blueprints/rust",
]
resolver = "3"


[workspace.package]
version = "0.0.10"
edition = "2024"
authors = ["Yann Prono <yann.prono@maif.fr>"]
readme = "README.md"
homepage = "https://github.com/MAIF/yozefu"
repository = "https://github.com/MAIF/yozefu"
documentation = "https://docs.rs/yozefu"
license = "Apache-2.0"
rust-version = "1.85.0"


[workspace.dependencies]
lib = { package = "yozefu-lib", path = "crates/lib/", version = "0.0.10" }
app = { package = "yozefu-app", path = "crates/app/", version = "0.0.10" }
command = { package = "yozefu-command", path = "crates/command/", version = "0.0.10" }
yozefu = { package = "yozefu", path = "crates/bin/", version = "0.0.10" }
tui = { package = "yozefu-tui", path = "crates/tui/", version = "0.0.10" }
wasm-types = { package = "wasm-types", path = "crates/wasm-types/", version = "0.0.10" }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde = { version = "1.0.219", features = ["derive"] }
log = {version = "0.4.27" }
strum = {version = "0.27.1" }

[profile.release]
opt-level = 3
debug = "none"
debug-assertions = false
overflow-checks = true
strip = true
# lto = "fat"
panic = "abort"
incremental = false

[workspace.metadata.release]
shared-version = true
tag-message = "chore: Release version v{{version}}"
pre-release-commit-message = "chore: Release version v{{version}}"
tag-name = "{{version}}"

