[package]
name = "yozefu-app"
description = "A TUI for browsing kafka topics"
keywords = ["kafka", "consumer", "search", "avro"]
categories = ["command-line-utilities", "development-tools", "gui"]
readme = "README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
log = "0.4.25"
lib = { workspace = true, features = ["native"] }
itertools = "0.14.0"
thousands = "0.2.0"
indexmap = "2.7.1"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
extism = "1.9.1"
url = { version = "2.5.4", features = ["serde"] }
resolve-path = "0.1.0"
directories = "6.0.0"
chrono = "0.4.39"


[features]
ssl-vendored = [
    "rdkafka/ssl-vendored"
]
gssapi-vendored = [
    "rdkafka/gssapi-vendored"
]
