[package]
name = "yozefu-command"
description = "Clap commands of yozefu"
keywords = ["argument", "cli", "tui", "parser", "parse"]
readme = "README.md"
categories = [
    "command-line-utilities",
    "development-tools",
    "command-line-interface",
]
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
clap = { version = "4.5.29", features = [
    "derive",
    "env",
    "color",
    "suggestions",
] }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = "0.11.6"
chrono = "0.4.39"
strum = { workspace = true, features = ["derive", "strum_macros"] }
indicatif = { version = "0.17.11", features = ["tokio"] }
tempfile = "3.17.0"
tokio-util = "0.7.13"
futures = "0.3.31"
itertools = "0.14.0"
tokio = { version = "1", features = ["full", "tracing"] }
rdkafka = { version = "0.37.0", features = [
    "libz-static",
    "cmake-build",
    "libz-static",
    "curl-static",
    "libz",
    "zstd",
    "external-lz4",
] }
extism = { version = "1.10.0" }
indexmap = "2.7.1"
tui = { workspace = true }
app = { workspace = true }
lib = { workspace = true }
reqwest = { version = "0.12.12", features = ["json"] }

[features]
ssl-vendored = [
    "rdkafka/ssl-vendored",
    "tui/ssl-vendored",
    "app/ssl-vendored"
]
gssapi-vendored = [
    "rdkafka/gssapi-vendored",
    "tui/gssapi-vendored",
    "app/gssapi-vendored"
]
