[package]
name = "yozefu-lib"
description = "Core library of yozefu"
readme = "README.md"
keywords = ["kafka", "consumer", "search", "avro"]
categories = ["data-structures", "parser-implementations"]
documentation = "https://docs.rs/yozefu-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4.40", features = ["serde"], optional = true }
itertools = "0.14.0"
strum = { workspace = true, features = ["derive", "strum_macros"], optional = true }
fuzzydate = {version = "0.2.3", optional = true }
nom = "8.0.0"
rdkafka = { version = "0.37.0", features = [], optional = true}
url = "2.5.4"
apache-avro = "0.17.0"
reqwest = { version = "0.12.15", features = ["json"] }


[dev-dependencies]
insta = { version = "1.42.2", features = ["filters", "glob"] }
protobuf = "3.7.2"
tokio = { version = "1.44.1", features = ["rt"] }

[features]
native = [
    "dep:chrono",
    "dep:rdkafka",
    "dep:fuzzydate",
    "dep:strum",
]
