[package]
name = "yozefu-tui"
description = "A TUI for browsing kafka topics"
keywords = ["kafka", "consumer", "tui", "terminal"]
readme = "README.md"
categories = [
    "command-line-utilities",
    "gui",
    "development-tools"
]
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", features = ["preserve_order"] }
log = "0.4.25"
tui-input = "0.11.1"
chrono = "0.4.39"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
ratatui = { version = "0.29.0", features = ["serde", "unstable-rendered-line-info"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
itertools = "0.14.0"
bytesize = { version = "1.3.0" }
nom = "8.0.0"
throbber-widgets-tui = "0.8.0"
futures = "0.3.31"
open = "5.3.2"
tokio-util = "0.7.13"
thousands = "0.2.0"
circular-buffer = "0.1.9"
copypasta = "0.10.1"
rayon = "1.10.0"
lib = { workspace = true }
app = { workspace = true }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }

[features]
ssl-vendored = [
    "rdkafka/ssl-vendored"
]
gssapi-vendored = [
    "rdkafka/gssapi-vendored"
]
