[package]
name = "yozefu-wasm-types"
readme = "README.md"
description = "Types and structures for defining WebAssembly modules"
keywords = ["kafka", "consumer", "search", "avro", "wasm"]
categories = ["data-structures", "wasm"]
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135", features = ["preserve_order"] }
lib = { workspace = true }
