[package]
name = "yozefu-wasm-types"
readme = "README.md"
description = "Types and structures for defining WebAssembly modules"
keywords = ["kafka", "consumer", "search", "avro", "wasm"]
categories = ["data-structures", "wasm"]
documentation = "https://docs.rs/yozefu-wasm-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
lib = { workspace = true }
