[package]
name = "yozefu-wasm-blueprints-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
extism-pdk = "1.3.0"
serde = {version = "1.0.218", features = ["derive"]}
yozefu-wasm-types = { git = "https://github.com/MAIF/yozefu.git", branch="main" }
#yozefu-wasm-types = { path = "../../wasm-types" }


[workspace]

[lib]
crate-type = ["cdylib"]

[package.metadata.cargo-machete]
ignored = ["serde"]